correct error due to rastrio update

--- a/OHprecglobal.ipynb
+++ b/OHprecglobal.ipynb
@@ -211,7 +211,7 @@
     "        else:\n",
     "            file = os.path.join(folder_path, '')+file_name+\".tif\".format(i+1)\n",
     "        with rio.open(file) as dataset:\n",
-    "            x, y = dataset.index(lon, lat)\n",
+    "            x, y = map(int, rio.transform.rowcol(dataset.transform, lon, lat))\n",
     "            value = dataset.read(1)[x, y]\n",
     "        return value\n",
     "    \n",
