Fixed Sr map with proper coordinates

--- a/BioavSrMap.ipynb
+++ b/BioavSrMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,10 @@
     "import LoadSaveFunctions as lsf\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import rasterio as rio\n",
-    "import os\n",
-    "import calendar\n",
-    "import pandas as pd\n",
     "import ipyleaflet\n",
     "import ipywidgets as ipw\n",
-    "from pyproj import CRS, Transformer"
+    "from pyproj import CRS, Transformer\n",
+    "from matplotlib.ticker import FixedLocator"
    ]
   },
   {
@@ -87,25 +84,56 @@
     "crs_mollweide = CRS.from_string('ESRI:54012')  # CRS pour Mollweide\n",
     "crs_wgs84 = CRS.from_epsg(4326)  # CRS pour WGS 84 (EPSG:4326)\n",
     "\n",
-    "# Créer un Transformer pour effectuer les conversions de coordonnées\n",
-    "transformer = Transformer.from_crs(crs_wgs84, crs_mollweide, always_xy=True)\n",
+    "# Créer un Transformer pour convertir les coordonnées\n",
+    "transformer_to_wgs84 = Transformer.from_crs(crs_mollweide, crs_wgs84, always_xy=True)\n",
     "\n",
     "# Limites géographiques de la France en WGS 84 (longitude, latitude)\n",
     "lon_min, lon_max = -5.14, 9.56\n",
     "lat_min, lat_max = 41.33, 51.09\n",
     "\n",
-    "# Convertir ces coordonnées en Mollweide\n",
-    "x_min, y_min = transformer.transform(lon_min, lat_min)\n",
-    "x_max, y_max = transformer.transform(lon_max, lat_max)\n",
+    "# Convertir les coordonnées WGS 84 (lon/lat) vers Mollweide (x/y)\n",
+    "transformer_to_mollweide = Transformer.from_crs(crs_wgs84, crs_mollweide, always_xy=True)\n",
+    "x_min, y_min = transformer_to_mollweide.transform(lon_min, lat_min)\n",
+    "x_max, y_max = transformer_to_mollweide.transform(lon_max, lat_max)\n",
     "\n",
     "# Filtrer les données du GeoTIFF en fonction des coordonnées projetées\n",
-    "subset = data.sel(x=slice(x_min, x_max), y=slice(y_max, y_min))  # Attention à l'ordre des coordonnées Y\n",
+    "subset = data.sel(x=slice(x_min, x_max), y=slice(y_max, y_min))\n",
     "\n",
-    "# Plotter la sous-section centrée sur la France\n",
-    "plt.figure(figsize=(10, 8))\n",
-    "subset.plot(cmap='viridis')\n",
-    "plt.title('Portion du GeoTIFF centrée sur la France')\n",
-    "plt.show()"
+    "# Créer un plot\n",
+    "fig, ax = plt.subplots(figsize=(10, 8))\n",
+    "im = ax.imshow(subset[0], origin='upper', extent=[x_min, x_max, y_min, y_max], cmap='viridis')\n",
+    "\n",
+    "# Définir les ticks (graduations) et convertir en latitude/longitude\n",
+    "def update_ticks(ax, transformer, axis='x'):\n",
+    "    # Récupérer les valeurs actuelles des ticks\n",
+    "    ticks = ax.get_xticks() if axis == 'x' else ax.get_yticks()\n",
+    "\n",
+    "    # Transformer les coordonnées en lat/lon\n",
+    "    new_labels = []\n",
+    "    for tick in ticks:\n",
+    "        lon, lat = transformer.transform(tick, 0) if axis == 'x' else transformer.transform(0, tick)\n",
+    "        new_labels.append(lon if axis == 'x' else lat)\n",
+    "\n",
+    "    # Fixer les emplacements des ticks et leurs étiquettes\n",
+    "    if axis == 'x':\n",
+    "        ax.xaxis.set_major_locator(FixedLocator(ticks))\n",
+    "        ax.set_xticklabels([f\"{lon:.2f}\" for lon in new_labels])\n",
+    "    else:\n",
+    "        ax.yaxis.set_major_locator(FixedLocator(ticks))\n",
+    "        ax.set_yticklabels([f\"{lat:.2f}\" for lat in new_labels])\n",
+    "\n",
+    "# Mettre à jour les axes x et y avec les nouvelles coordonnées\n",
+    "update_ticks(ax, transformer_to_wgs84, axis='x')  # Pour l'axe des x (longitude)\n",
+    "update_ticks(ax, transformer_to_wgs84, axis='y')  # Pour l'axe des y (latitude)\n",
+    "\n",
+    "# Ajouter des étiquettes aux axes\n",
+    "ax.set_xlabel(\"Longitude\")\n",
+    "ax.set_ylabel(\"Latitude\")\n",
+    "\n",
+    "# Afficher la barre de couleur et la figure\n",
+    "plt.colorbar(im, ax=ax)\n",
+    "plt.title('Portion du GeoTIFF centrée sur la France avec axes en lat/lon')\n",
+    "plt.show()\n"
    ]
   },
   {
