--- a/BioavSrMap.ipynb
+++ b/BioavSrMap.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "\"\"\"  Import necessary packages \"\"\"\n",
     "\n",
+    "import os\n",
     "import rioxarray as rxr\n",
     "import LoadSaveFunctions as lsf\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,19 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" select file to open with its path \"\"\"\n",
+    "\"\"\" Load and check raster file using rioxarray package\"\"\"\n",
     "\n",
-    "file_path = lsf.load_file()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\" Load and check raster file \"\"\"\n",
-    "\n",
+    "file_path = lsf.load_file()\n",
     "try:\n",
     "    data = rxr.open_rasterio(file_path, masked=True)\n",
     "    print(\"Geotiff file loaded successfully.\")\n",
@@ -59,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Plot histogram of values \"\"\"\n",
+    "\"\"\" Plot histogram of values from the previously loaded raster file \"\"\"\n",
     "\n",
     "f, ax = plt.subplots(figsize=(8, 5))\n",
     "data.plot.hist(ax=ax, color=\"purple\", bins=30, edgecolor='white')\n",
@@ -80,41 +71,41 @@
    "source": [
     "\"\"\" Plot a limited area of the raster \"\"\"\n",
     "\n",
-    "# Définir la projection de ton GeoTIFF (ESRI:54012) et WGS 84 (latitude/longitude)\n",
-    "crs_mollweide = CRS.from_string('ESRI:54012')  # CRS pour Mollweide\n",
-    "crs_wgs84 = CRS.from_epsg(4326)  # CRS pour WGS 84 (EPSG:4326)\n",
+    "# Definition of the GeoTIFF projection (ESRI:54012) and WGS 84 (latitude/longitude)\n",
+    "crs_mollweide = CRS.from_string('ESRI:54012')  # CRS for Mollweide\n",
+    "crs_wgs84 = CRS.from_epsg(4326)  # CRS for WGS 84 (EPSG:4326)\n",
     "\n",
-    "# Créer un Transformer pour convertir les coordonnées\n",
+    "# Create a transformer for coordinate conversion\n",
     "transformer_to_wgs84 = Transformer.from_crs(crs_mollweide, crs_wgs84, always_xy=True)\n",
+    "transformer_to_mollweide = Transformer.from_crs(crs_wgs84, crs_mollweide, always_xy=True)\n",
     "\n",
-    "# Limites géographiques de la France en WGS 84 (longitude, latitude)\n",
+    "# France geographic limits in WGS 84 (longitude, latitude)\n",
     "lon_min, lon_max = -5.14, 9.56\n",
     "lat_min, lat_max = 41.33, 51.09\n",
     "\n",
-    "# Convertir les coordonnées WGS 84 (lon/lat) vers Mollweide (x/y)\n",
-    "transformer_to_mollweide = Transformer.from_crs(crs_wgs84, crs_mollweide, always_xy=True)\n",
+    "# Coordinate conversion from WGS 84 (lon/lat) to Mollweide (x/y)\n",
     "x_min, y_min = transformer_to_mollweide.transform(lon_min, lat_min)\n",
     "x_max, y_max = transformer_to_mollweide.transform(lon_max, lat_max)\n",
     "\n",
-    "# Filtrer les données du GeoTIFF en fonction des coordonnées projetées\n",
+    "# Filter Geotiff data with selected coordinates\n",
     "subset = data.sel(x=slice(x_min, x_max), y=slice(y_max, y_min))\n",
     "\n",
-    "# Créer un plot\n",
+    "# Create a plot\n",
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
     "im = ax.imshow(subset[0], origin='upper', extent=[x_min, x_max, y_min, y_max], cmap='viridis')\n",
     "\n",
-    "# Définir les ticks (graduations) et convertir en latitude/longitude\n",
+    "# Definition of the ticks and conversion to latitude/longitude\n",
     "def update_ticks(ax, transformer, axis='x'):\n",
-    "    # Récupérer les valeurs actuelles des ticks\n",
+    "    # Recover existing ticks\n",
     "    ticks = ax.get_xticks() if axis == 'x' else ax.get_yticks()\n",
     "\n",
-    "    # Transformer les coordonnées en lat/lon\n",
+    "    # Transform ticks to lat/lon\n",
     "    new_labels = []\n",
     "    for tick in ticks:\n",
     "        lon, lat = transformer.transform(tick, 0) if axis == 'x' else transformer.transform(0, tick)\n",
     "        new_labels.append(lon if axis == 'x' else lat)\n",
     "\n",
-    "    # Fixer les emplacements des ticks et leurs étiquettes\n",
+    "    # Set ticks place and their label\n",
     "    if axis == 'x':\n",
     "        ax.xaxis.set_major_locator(FixedLocator(ticks))\n",
     "        ax.set_xticklabels([f\"{lon:.2f}\" for lon in new_labels])\n",
@@ -122,15 +113,15 @@
     "        ax.yaxis.set_major_locator(FixedLocator(ticks))\n",
     "        ax.set_yticklabels([f\"{lat:.2f}\" for lat in new_labels])\n",
     "\n",
-    "# Mettre à jour les axes x et y avec les nouvelles coordonnées\n",
+    "# Update axes x and y with new coordinates\n",
     "update_ticks(ax, transformer_to_wgs84, axis='x')  # Pour l'axe des x (longitude)\n",
     "update_ticks(ax, transformer_to_wgs84, axis='y')  # Pour l'axe des y (latitude)\n",
     "\n",
-    "# Ajouter des étiquettes aux axes\n",
+    "# Add label to axes\n",
     "ax.set_xlabel(\"Longitude\")\n",
     "ax.set_ylabel(\"Latitude\")\n",
     "\n",
-    "# Afficher la barre de couleur et la figure\n",
+    "# Display color bar and figure\n",
     "plt.colorbar(im, ax=ax)\n",
     "plt.title('Portion du GeoTIFF centrée sur la France avec axes en lat/lon')\n",
     "plt.show()\n"
@@ -148,6 +139,15 @@
     "lat = None\n",
     "lon = None\n",
     "current_marker = None\n",
+    "srvalue = None\n",
+    "srerror = None\n",
+    "\n",
+    "# Load strotium raster files (values and s.e.)\n",
+    "folder_path = lsf.load_folder()\n",
+    "file1 = os.path.join(folder_path, '')+\"GlobalSr.tif\"\n",
+    "file2 = os.path.join(folder_path, '')+\"GlobalSr_se.tif\"\n",
+    "dataset = rxr.open_rasterio(file1, masked=True)\n",
+    "dataerror = rxr.open_rasterio(file2, masked=True)\n",
     "\n",
     "# Create map centered on given coordiantes\n",
     "center = [45.7586, 4.8333]  # Lyon\n",
@@ -160,10 +160,14 @@
     "\n",
     "# Function to get coordinates by clicking on the map\n",
     "def on_map_interaction(**kwargs):\n",
-    "    global lat, lon, current_marker\n",
+    "    global lat, lon, current_marker, srvalue, srerror\n",
     "    if kwargs.get('type') == 'click':\n",
     "        lat, lon = kwargs.get('coordinates')\n",
-    "        coord_label.value = f\"Coordonnées : Latitude {lat}, Longitude {lon}\"\n",
+    "        proj = Transformer.from_crs(\"EPSG:4326\", dataset.rio.crs, always_xy=True)\n",
+    "        x, y = proj.transform(lon, lat)\n",
+    "        srvalue = dataset.sel(x=x, y=y, method=\"nearest\")\n",
+    "        srerror = dataerror.sel(x=x, y=y, method=\"nearest\")\n",
+    "        coord_label.value = f\"Coordonnées : Latitude {round(lat, 2)}, Longitude {round(lon, 2)} ; 87Sr/86Sr = {round(float(srvalue.values), 4)}±{round(float(srerror.values), 4)}\"\n",
     "\n",
     "        # Remove existing current marker\n",
     "        if current_marker is not None:\n",
