Code cleaning for oceanic data

--- a/Ocean_d18o_CDF.ipynb
+++ b/Ocean_d18o_CDF.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\" Import required packages \"\"\"\n",
     "\n",
-    "import netCDF4\n",
+    "import netCDF4 as nc\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cartopy.crs as ccrs\n",
+    "from cartopy.mpl.gridliner import LONGITUDE_FORMATTER, LATITUDE_FORMATTER\n",
     "import LoadSaveFunctions as lsf"
    ]
   },
@@ -19,37 +22,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Load netCDF File \"\"\"\n",
+    "\"\"\" Load netCDF File and extract variables\"\"\"\n",
     "\n",
     "file_path = lsf.load_file()\n",
-    "f = netCDF4.Dataset(file_path)\n",
-    "print(f) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"Access variables\"\"\"\n",
+    "dataset = nc.Dataset(file_path)\n",
     "\n",
-    "print(f.variables.keys()) # get all variable names\n",
-    "d18o = f.variables['d18o']  # oxygen isotope composition variable\n",
-    "print(d18o) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for d in f.dimensions.items():\n",
-    "    print(d)\n",
+    "lat = dataset.variables['lat'][:]\n",
+    "lon = dataset.variables['lon'][:]\n",
+    "depth = dataset.variables['depth'][:]\n",
+    "d18Osw = dataset.variables['d18o'][:]\n",
     "\n",
-    "d18o.dimensions\n",
-    "d18o.shape"
+    "dataset.close()\n",
+    "\n",
+    "print('Min value: {:.2f}; Max value: {:.2f}'.format(d18Osw.min(), d18ow.max()))"
    ]
   },
   {
@@ -58,36 +43,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "depth = f.variables['depth']\n",
-    "lon,lat = f.variables['lon'], f.variables['lat']\n",
-    "print(depth)\n",
-    "print(lon)\n",
-    "print(lat)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# longitude = lon[:]\n",
-    "# print(longitude)\n",
-    "# latitude = lat[:]\n",
-    "# print(latitude)\n",
-    "# dpth = depth[:]\n",
-    "# print(dpth)\n",
-    "d18ow = d18o[:]\n",
-    "print('Min value: {:.2f}; Max value: {:.2f}'.format(d18ow.min(), d18ow.max()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f.close()"
+    "\"\"\"Plot map at given depth\"\"\"\n",
+    "\n",
+    "# Function to find the nearest depth value\n",
+    "def find_nearest_depth(depth_array, input_depth):\n",
+    "    idx = (np.abs(depth_array - input_depth)).argmin()\n",
+    "    return idx\n",
+    "\n",
+    "# Choose depth\n",
+    "dpth = 3000\n",
+    "nearest_depth_idx = find_nearest_depth(depth, dpth)\n",
+    "\n",
+    "fig = plt.figure(figsize=(10, 5))\n",
+    "ax = plt.axes(projection=ccrs.PlateCarree())\n",
+    "ax.coastlines()\n",
+    "\n",
+    "# Grid and axis format\n",
+    "gl = ax.gridlines(draw_labels=True, linestyle='--')\n",
+    "gl.top_labels = False\n",
+    "gl.right_labels = False\n",
+    "gl.xformatter = LONGITUDE_FORMATTER\n",
+    "gl.yformatter = LATITUDE_FORMATTER\n",
+    "\n",
+    "# Retrieve data at given depth\n",
+    "data_at_depth = d18Osw[nearest_depth_idx, :, :]\n",
+    "\n",
+    "# trace map\n",
+    "contour = ax.contourf(lon, lat, data_at_depth, 40, transform=ccrs.PlateCarree(), cmap='coolwarm')\n",
+    "cbar = plt.colorbar(contour, ax=ax, orientation='vertical', label='d18Osw value')\n",
+    "ax.set_title(f'seawater oxygen isotope composition at {depth[nearest_depth_idx]} meters depth')\n",
+    "\n",
+    "# plt.show()"
    ]
   }
  ],
