--- a/Ocean_d18o_CDF.ipynb
+++ b/Ocean_d18o_CDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "\n",
     "dataset.close()\n",
     "\n",
-    "print('Min value: {:.2f}; Max value: {:.2f}'.format(d18Osw.min(), d18ow.max()))"
+    "print('Min value: {:.2f}; Max value: {:.2f}'.format(d18Osw.min(), d18Osw.max()))"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "    return idx\n",
     "\n",
     "# Choose depth\n",
-    "dpth = 3000\n",
+    "dpth = 200 #insert positive value in meters\n",
     "nearest_depth_idx = find_nearest_depth(depth, dpth)\n",
     "\n",
     "fig = plt.figure(figsize=(10, 5))\n",
