Added value search provding lat lon and depth

--- a/Ocean_d18o_CDF.ipynb
+++ b/Ocean_d18o_CDF.ipynb
@@ -43,6 +43,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Coordinates to search for\n",
+    "target_latitude = 40.0   # Replace with your target latitude\n",
+    "target_longitude = -20.0  # Replace with your target longitude\n",
+    "target_depth = 0.0      # Replace with your target depth\n",
+    "\n",
+    "# Find the indices of the nearest latitude, longitude, and depth\n",
+    "lat_idx = np.abs(lat - target_latitude).argmin()\n",
+    "lon_idx = np.abs(lon - target_longitude).argmin()\n",
+    "depth_idx = np.abs(depth - target_depth).argmin()\n",
+    "\n",
+    "# Get the oxygen isotope value at the nearest coordinates\n",
+    "d18Osw_value = d18Osw[depth_idx, lat_idx, lon_idx]\n",
+    "\n",
+    "# Output the result\n",
+    "print('Oxygen isotope composition of seawater: {:.2f} ‰ (V-SMOW)'.format(d18Osw_value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\"Plot map at given depth\"\"\"\n",
     "\n",
     "# Function to find the nearest depth value\n",
@@ -51,7 +74,7 @@
     "    return idx\n",
     "\n",
     "# Choose depth\n",
-    "dpth = 200 #insert positive value in meters\n",
+    "dpth = 20 #insert positive value in meters\n",
     "nearest_depth_idx = find_nearest_depth(depth, dpth)\n",
     "\n",
     "fig = plt.figure(figsize=(10, 5))\n",
