modifications in progress

--- a/Ocean_d18o_CDF.ipynb
+++ b/Ocean_d18o_CDF.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "# trace map\n",
     "contour = ax.contourf(lon, lat, data_at_depth, 40, transform=ccrs.PlateCarree(), cmap='coolwarm')\n",
-    "cbar = plt.colorbar(contour, ax=ax, orientation='vertical', label='d18Osw value')\n",
+    "cbar = plt.colorbar(contour, ax=ax, orientation='vertical', label='δ¹⁸Oₛₑₐᵥᵥₐₜₑᵣ (‰ V-SMOW)')\n",
     "ax.set_title(f'seawater oxygen isotope composition at {depth[nearest_depth_idx]} meters depth')\n",
     "\n",
     "# plt.show()"
