cleaning code and add test file

--- a/BioavSrMap.ipynb
+++ b/BioavSrMap.ipynb
@@ -50,28 +50,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bounds = data.rio.bounds()\n",
-    "print(\"Coordonnées projetées des limites :\", bounds)\n",
-    "\n",
-    "# easting = [bounds[0], bounds[2]]  # left, right\n",
-    "# northing = [bounds[1], bounds[3]]  # bottom, top\n",
-    "\n",
-    "easting = [-16654000, 16654000]  # left, right\n",
-    "northing = [-2109501.7, 2109501.7]  # bottom, top\n",
-    "\n",
-    "transformer = Transformer.from_crs(str(data.rio.crs), \"EPSG:4326\", always_xy=True)\n",
-    "# lon, lat = transformer.transform(easting, northing)\n",
-    "lon, lat = transformer.transform(easting, northing)\n",
-    "\n",
-    "print(f\"Coordonnées des coins en lat/lon :\\nLatitude: {lat}\\nLongitude: {lon}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\" Plot histogram of values from the previously loaded raster file \"\"\"\n",
     "\n",
     "f, ax = plt.subplots(figsize=(8, 5))\n",
@@ -102,12 +80,12 @@
     "transformer_to_mollweide = Transformer.from_crs(crs_wgs84, crs_laea, always_xy=True)\n",
     "\n",
     "# France geographic limits in WGS 84 (longitude, latitude)\n",
-    "# lon_min, lon_max = -5.14, 9.56\n",
-    "# lat_min, lat_max = 41.33, 51.09\n",
+    "lon_min, lon_max = -5.14, 9.56\n",
+    "lat_min, lat_max = 41.33, 51.09\n",
     "\n",
     "# USA geographic limits\n",
-    "lon_min, lon_max = -125.0000, -66.93457\n",
-    "lat_min, lat_max = 24.3963, 49.3843\n",
+    "# lon_min, lon_max = -125.0000, -66.93457\n",
+    "# lat_min, lat_max = 24.3963, 49.3843\n",
     "\n",
     "\n",
     "# Coordinate conversion from WGS 84 (lon/lat) to Lambert Azimuthal Equal Area (x/y)\n",
@@ -169,7 +147,7 @@
     "srvalue = None\n",
     "srerror = None\n",
     "\n",
-    "# Load strotium raster files (values and s.e.)\n",
+    "# Load strontium raster files (values and s.e.)\n",
     "folder_path = lsf.load_folder()\n",
     "file1 = os.path.join(folder_path, '')+\"GlobalSr.tif\"\n",
     "file2 = os.path.join(folder_path, '')+\"GlobalSr_se.tif\"\n",
@@ -212,185 +190,6 @@
     "ui\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rioxarray\n",
-    "import pyproj\n",
-    "\n",
-    "# Charger le GeoTIFF avec rioxarray\n",
-    "geo_tiff_path = lsf.load_file()\n",
-    "data = rioxarray.open_rasterio(geo_tiff_path)\n",
-    "\n",
-    "# Vérifier la projection (CRS)\n",
-    "current_crs = data.rio.crs\n",
-    "print(\"Projection actuelle du fichier (CRS):\", current_crs)\n",
-    "\n",
-    "# Si le CRS n'est pas EPSG:4326, effectuer une conversion\n",
-    "if current_crs != \"EPSG:4326\":\n",
-    "    print(\"Le fichier n'est pas en EPSG:4326, conversion nécessaire.\")\n",
-    "    \n",
-    "    # Transformer les coordonnées en EPSG:4326 (latitude/longitude)\n",
-    "    transformer = pyproj.Transformer.from_crs(current_crs, \"EPSG:4326\", always_xy=True)\n",
-    "    \n",
-    "    # Extraire les limites projetées du fichier (easting, northing)\n",
-    "    bounds = data.rio.bounds()\n",
-    "    print(\"Coordonnées projetées des limites :\", bounds)\n",
-    "\n",
-    "    # Coordonnées des limites (easting, northing)\n",
-    "    easting = [bounds[0], bounds[2]]  # left, right\n",
-    "    northing = [bounds[1], bounds[3]]  # bottom, top\n",
-    "\n",
-    "    # Vérifier que les valeurs sont dans la plage de validité\n",
-    "    print(f\"Vérification des valeurs easting: {easting}\")\n",
-    "    print(f\"Vérification des valeurs northing: {northing}\")\n",
-    "\n",
-    "    # Transformer les coordonnées projetées en lat/lon\n",
-    "    lon, lat = transformer.transform(easting, northing)\n",
-    "    \n",
-    "    # Afficher les coordonnées transformées (latitude, longitude)\n",
-    "    print(f\"Coordonnées transformées en lat/lon :\\nLatitude: {lat}\\nLongitude: {lon}\")\n",
-    "else:\n",
-    "    print(\"Le fichier est déjà en EPSG:4326 (latitude/longitude), aucune conversion nécessaire.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rioxarray\n",
-    "\n",
-    "# Charger le GeoTIFF avec rioxarray\n",
-    "geo_tiff_path = lsf.load_file()\n",
-    "data = rioxarray.open_rasterio(geo_tiff_path)\n",
-    "\n",
-    "# Vérifier la projection (CRS)\n",
-    "current_crs = data.rio.crs\n",
-    "print(\"CRS complet (en WKT) :\", current_crs)\n",
-    "\n",
-    "# Extraire les informations du CRS sous forme de dictionnaire\n",
-    "crs_dict = current_crs.to_dict()\n",
-    "print(crs_dict)\n",
-    "\n",
-    "# Vérifier le type de projection\n",
-    "projection_type = crs_dict.get('proj', None)\n",
-    "print(\"Type de projection :\", projection_type)\n",
-    "\n",
-    "# Test spécifique pour la projection Lambert Azimuthal Equal Area\n",
-    "if projection_type == 'laea':  # 'laea' correspond à Lambert Azimuthal Equal Area\n",
-    "    print(\"Le fichier utilise une projection Lambert Azimuthal Equal Area (LAEA).\")\n",
-    "else:\n",
-    "    print(f\"Projection détectée : {projection_type}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rioxarray\n",
-    "\n",
-    "# Charger le GeoTIFF avec rioxarray\n",
-    "geo_tiff_path = lsf.load_file()\n",
-    "data = rioxarray.open_rasterio(geo_tiff_path)\n",
-    "\n",
-    "# Vérifier le CRS actuel\n",
-    "current_crs = data.rio.crs\n",
-    "print(\"CRS détecté :\", current_crs)\n",
-    "\n",
-    "# Si le CRS est incorrect, forcer l'assignation correcte (ESRI:54012 - Lambert Azimuthal Equal Area)\n",
-    "if current_crs != \"ESRI:54012\":\n",
-    "    print(\"Le fichier est mal référencé. Assignation correcte du CRS ESRI:54012.\")\n",
-    "\n",
-    "    # Réassigner le CRS correct sans reprojeter les données\n",
-    "    data = data.rio.write_crs(\"ESRI:54012\", inplace=True)\n",
-    "\n",
-    "    # Vérification\n",
-    "    print(\"Nouveau CRS après assignation :\", data.rio.crs)\n",
-    "else:\n",
-    "    print(\"Le fichier a déjà le CRS correct.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TEST CHATGPT\n",
-    "\n",
-    "\n",
-    "import rioxarray\n",
-    "from pyproj import CRS, Transformer\n",
-    "\n",
-    "# Charger le GeoTIFF avec rioxarray\n",
-    "geo_tiff_path = lsf.load_file()\n",
-    "data = rioxarray.open_rasterio(geo_tiff_path)\n",
-    "\n",
-    "# Vérifier le CRS actuel\n",
-    "current_crs = data.rio.crs\n",
-    "print(\"Projection actuelle du fichier (CRS):\", current_crs)\n",
-    "\n",
-    "# Vérification si le fichier est en EPSG:4326 (WGS84, lat/lon)\n",
-    "if current_crs != \"EPSG:4326\":\n",
-    "    print(\"Le fichier n'est pas en EPSG:4326, conversion nécessaire.\")\n",
-    "    \n",
-    "    # Définir le CRS actuel du fichier (ESRI:54012) et le CRS cible (WGS84)\n",
-    "    crs_laea = CRS.from_string('ESRI:54012')  # CRS pour Lambert Azimuthal Equal Area\n",
-    "    crs_wgs84 = CRS.from_epsg(4326)  # CRS pour WGS84 (latitude/longitude)\n",
-    "    \n",
-    "    # Créer le transformer pour passer de ESRI:54012 à WGS84\n",
-    "    transformer_to_wgs84 = Transformer.from_crs(crs_laea, crs_wgs84, always_xy=True)\n",
-    "    \n",
-    "    # Extraire les limites projetées du fichier (easting, northing)\n",
-    "    bounds = data.rio.bounds()\n",
-    "    print(\"Coordonnées projetées des limites :\", bounds)\n",
-    "\n",
-    "    # Coordonnées des limites (easting, northing)\n",
-    "    easting = [bounds[0], bounds[2]]  # left, right (easting)\n",
-    "    northing = [bounds[1], bounds[3]]  # bottom, top (northing)\n",
-    "\n",
-    "    # Transformer les coordonnées projetées en lat/lon\n",
-    "    lon, lat = transformer_to_wgs84.transform(easting, northing)\n",
-    "    \n",
-    "    # Afficher les coordonnées transformées (latitude, longitude)\n",
-    "    print(f\"Coordonnées transformées en lat/lon :\\nLatitude: {lat}\\nLongitude: {lon}\")\n",
-    "else:\n",
-    "    print(\"Le fichier est déjà en EPSG:4326 (latitude/longitude), aucune conversion nécessaire.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyproj import CRS, Transformer\n",
-    "\n",
-    "# Définir le CRS pour Eckert IV\n",
-    "crs_eckert_iv = CRS.from_proj4('+proj=eck4 +lon_0=0 +x_0=0 +y_0=0 +ellps=WGS84 +units=m +no_defs')\n",
-    "crs_wgs84 = CRS.from_epsg(4326)  # CRS pour WGS84 (latitude/longitude)\n",
-    "\n",
-    "# Créer le transformer pour passer de Eckert IV à WGS84\n",
-    "transformer_to_wgs84 = Transformer.from_crs(crs_eckert_iv, crs_wgs84, always_xy=True)\n",
-    "\n",
-    "# Exemple de coordonnées en Eckert IV (easting, northing)\n",
-    "easting = [-16654000, 8460000]  # Remplacez par vos valeurs\n",
-    "northing = [-1600000, 8460000]  # Remplacez par vos valeurs\n",
-    "\n",
-    "# Transformer les coordonnées projetées en lat/lon\n",
-    "longitude, latitude = transformer_to_wgs84.transform(easting, northing)\n",
-    "\n",
-    "# Afficher les coordonnées transformées (latitude, longitude)\n",
-    "print(f\"Longitude: {longitude}\\nLatitude: {latitude}\")\n"
    ]
   }
  ],
