--- a/ConvertProj.ipynb
+++ b/ConvertProj.ipynb
@@ -6,21 +6,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import rioxarray\n",
+    "from pyproj import CRS, Transformer\n",
+    "import LoadSaveFunctions as lsf\n",
+    "\n",
+    "# Charger le GeoTIFF avec rioxarray\n",
+    "geo_tiff_path = lsf.load_file()\n",
+    "data = rioxarray.open_rasterio(geo_tiff_path)\n",
+    "\n",
     "bounds = data.rio.bounds()\n",
     "print(\"Coordonnées projetées des limites :\", bounds)\n",
     "print(data.rio.crs)\n",
     "\n",
-    "easting = [bounds[0], bounds[2]]  # left, right\n",
-    "northing = [bounds[1], bounds[3]]  # bottom, top\n",
+    "# easting = [bounds[0], bounds[2]]  # left, right\n",
+    "# northing = [bounds[1], bounds[3]]  # bottom, top\n",
     "\n",
-    "# easting = [-16654000, 16654000]  # left, right\n",
-    "# northing = [-4000000, 1000000]  # bottom, top\n",
+    "X = [1200]  # left, right\n",
+    "Y = [-84025]  # bottom, top\n",
     "\n",
     "# northing = [-2109501.7, 2109501.7]  # bottom, top\n",
     "\n",
     "transformer = Transformer.from_crs(data.rio.crs, \"EPSG:4326\", always_xy=True)\n",
+    "lon, lat = transformer.transform(X, Y)\n",
     "# lon, lat = transformer.transform(easting, northing)\n",
-    "lon, lat = transformer.transform(easting, northing)\n",
     "\n",
     "print(f\"Coordonnées des coins en lat/lon :\\nLatitude: {lat}\\nLongitude: {lon}\")"
    ]
@@ -212,7 +220,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.2"
   }
  },
