--- a/OHprecglobal.ipynb
+++ b/OHprecglobal.ipynb
@@ -16,7 +16,7 @@
     "import os\n",
     "import calendar\n",
     "import pandas as pd\n",
-    "import ipyleaflet\n",
+    "import ipyleaflet # also install folium\n",
     "import ipywidgets as ipw"
    ]
   },
@@ -63,8 +63,8 @@
    "source": [
     "\"\"\" Plot raster and add specific datapoint \"\"\"\n",
     "\n",
-    "lat_point = 45\n",
-    "lon_point = 5\n",
+    "lat_point = 45.75\n",
+    "lon_point = 4.83\n",
     "\n",
     "f, ax = plt.subplots(figsize=(10, 4))\n",
     "data.plot(ax=ax, cmap = 'seismic')\n",
